Add game won message

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,6 +9,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/Blueprints/BP_MainGameMode.BP_MainGameMode_C
 GameInstanceClass=/Game/Blueprints/BP_GameInstance.BP_GameInstance_C
+EditorStartupMap=/Game/BusStopLevel.BusStopLevel
+GameDefaultMap=/Game/BusStopLevel.BusStopLevel
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -54,4 +56,3 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
-
